--- a/src/custom-style.css
+++ b/src/custom-style.css
@@ -1,69 +1,98 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+    --main-color: #000000;
+    
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+
+.logo p {
+    color: #ffffff;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
+.about h1 {
+    font-size: 50px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.about p {
+    font-size: 30px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.about-img img {
+    width: 100%;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.contact h1,
+.projects h1,
+.resume h1 {
+    color: var(--main-color);
+    font-size: 55px;
+}
+
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.card {
+    width: 46%;
+    margin: 2%;
+}
+
+.resume img {
+    width: 100%;
+}
+
+.skills {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+.type {
+    width: 30%;
+}
+
+
+.proficiencies h2 {
+    text-align: center;
+}
+
+.proficiencies p {
+    text-align: center;
+    margin: 15px;
+}
+
+@media(max-width: 600px) {
+    .hero {
+        height: 400px;
+    }
+
+   
+
+    .about h1 {
+        font-size: 30px;
+    }
+
+    .about p {
+        font-size: 15px;
+    }
+
+    .contact h1,
+    .projects h1,
+    .resume h1 {
+        font-size: 30px;
+    }
+
+    .card {
+        width: 100%;
+    }
+
+    .type {
+        width: 98%;
+    }
+
+    
 }
